--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@ Les consommables à la charge du prestataire sont les suivants :
     'Juridique':{ text:"La juriste rappelle les prescriptions du Décret 92-158 du 20 février 1992 reprises dans le Code du travail (articles R.237-1 et R.237-28), applicables aux travaux réalisés dans l’établissement par une entreprise extérieure.", image:"images/tilesia_juridique.png" }
   };
 
-  // Jeu 2 data (LESATI)
+  // Jeu 2 data (LESATI) — UPDATED per request
   const modalData2={
     'Direction':{
-      text:'La directrice s\'explique: "L\'entreprise LESATI assure les missions de production, distribution et commercialisation de l\'énergie dans la commune de Saint Georges. La mission de service public et la proximité client sont nos priorités".',
+      text:'La directrice s\'explique: "L\'entreprise LESATI assure les missions de production, distribution et commercialisation de l\'énergie dans la commune de Saint Georges (800 clients). La mission de service public et la proximité client sont nos priorités".',
       image:"images/direction_directrice_LESATI.png"
     },
     'Service production':{
-      text:"Certains de ces groupes ont atteint leurs limites techniques (dépassement du nombre d’heures limites prévues par le constructeur) et devront être révisés. A ce stade une révision des groupes coûte très chère, elle serait même plus onéreuse que l’achat de matériels neufs.",
+      text:`Certains de ces groupes ont atteint leurs limites techniques (dépassement du nombre d’heures limites prévues par le constructeur) et devront être révisés. A ce stade une révision des groupes coûte très chère, elle serait même plus onéreuse que l’achat de matériels neufs. Nous aurons besoins de 3 groupes électrogènes d’une puissance nominale de 800 kVA, de type diesel avec les certifications "Ultra" et "Iso 9001". Il faut penser aux documents nécessaires pour la bonne utilisation du matériel.`,
       image:"images/production_groupes_LESATI.png"
     },
     'Salaries':{
@@ -259,7 +259,7 @@ Les consommables à la charge du prestataire sont les suivants :
       image:"images/salaries_30_LESATI.png"
     },
     'Juridique':{
-      text:"La juriste rappelle qu'il est indispensable d'ajouter une garantie technique lors de l'achat des groupes 3 électrogènes avec la livraison à Saint Georges. Les groupes seront utilisées en continue dans un milieu humide et avec température élevée..",
+      text:"La juriste rappelle qu'il est indispensable d'ajouter une garantie technique lors de l'achat des groupes 3 électrogènes avec la livraison à Saint Georges. Les groupes seront utilisés en continu dans un milieu humide et avec température élevée.",
       image:"images/juridique_garantie_LESATI.png"
     }
   };
